--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "husky": "^7.0.0",
     "jest": "latest",
     "lint-staged": "^12.3.4",
+    "ng-mocks": "^14.1.0",
     "pretty-quick": "^3.1.3",
     "typescript": "~4.5.2"
   }
